syntax = "proto3";
package serviceA;

service serviceB {
    rpc AckMessage (AckMessageRequest) returns (AckMessageResponse) {}
}

message AckMessageRequest {
    string messageId = 1;
}

message AckMessageResponse {
    string status = 1;
}

message RabbitMQRequest {
    string messageId = 1;
    string name = 2;
}

message RabbitMQResponse {
    string greeting = 1;
}